# qcpu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  install_debug.sh  minrt_prof.ppm  minrtv4_prof.ppm  profile.json  release.sh  run.sh
qcpu/: Cargo.toml
qcpu-assembler/: Cargo.toml
qcpu-assembler/src/: code.rs  error.rs  lib.rs  syntax.rs
qcpu/cpp/: sim  sim.cpp
qcpu/src/: main.rs  ppm.rs
qcpu_assembler/: Cargo.toml
qcpu_assembler/src/: code.rs  lib.rs  syntax.rs
qcpu_assembler/src/v2/: mod.rs
qcpu_simulator/: Cargo.toml
qcpu_simulator/src/: execute.rs  lib.rs  pipeline.rs  reg.rs  result.rs  snapshot.rs
qcpu_simulator/src/v2/: context.rs  error.rs  execute.rs  memory.rs  mod.rs
qcpu_simulator/src/v4/: bp.rs  decode.rs  execute.rs  fsqrt_table.rs  log.rs  memory.rs  mod.rs  stat.rs  syntax.rs  table.rs
qcpu_syntax/: Cargo.toml
qcpu_syntax/script/: gen.py
qcpu_syntax/src/: error.rs  lib.rs  macros.rs  parser.rs  reg.rs  v2.rs
qcpu_syntax/src/v2/: enum_prop.rs  mod.rs  op.rs  pseudo.rs  reg.rs  syntax.rs
qcpu_tui/: Cargo.toml
qcpu_tui/src/: app.rs  lib.rs  tui.rs  ui.rs
qcpu_tui/src/v2/: app.rs  ui.rs
test_data/: cache.s  cls-rec.s  contest.sld  diff.ppm  diff_128.ppm  drawing.s  fadd.ppm  fast_rt.ppm  fib.s  float.s  float2.s  ftoi.s  imm.s  inb.s  join-stack.s  li.s  loop.s  lwi.s  m.ppm  mandelbrot.s  mandelbrot2.s  minrt.ppm  minrt.s  minrt_128.fadd.ppm  minrt_128.ftoi.ppm  minrt_128.itof.ppm  minrt_128.new.diff  minrt_128.new.diff.ppm  minrt_128.ppm  minrt_128_fg.json  minrt_256.fadd.ppm  minrt_256.fmul.diff  minrt_256.fmul.diff.ppm  minrt_256.fmul.ppm  minrt_256.ftoi.ppm  minrt_256.itof.diff.ppm  minrt_256.json  minrt_256.new.diff  minrt_256.ppm  minrt_256.s  (+31 more)
