[workspace]
members = ["qcpu", "qcpu_assembler", "qcpu_syntax", "qcpu_simulator"]
resolver = "2"
default-members = ["qcpu"]


[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.19", features = ["derive"] }

strum = "0.26.3"
strum_macros = "0.26.4"
nom = "7.1.3"

qcpu_assembler = { path = "./qcpu_assembler" }
qcpu_syntax = { path = "./qcpu_syntax" }
qcpu_simulator = { path = "./qcpu_simulator" }
