[workspace]
members = ["qcpu", "qcpu_assembler", "qcpu_syntax", "qcpu_simulator"]
resolver = "2"
default-members = ["qcpu"]

[workspace.package]
version = "4.6.3"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.19", features = ["derive"] }

crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
strum = "0.26.3"
strum_macros = "0.26.4"
nom = "7.1.3"
color-eyre = "0.6.3"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.12"
futures = "0.3.31"
signal-hook = "0.3"
enum_properties = "0.3.0"
bitvec = "1.0.1"
tracing = "0.1.41"
cfg-if = "1.0.0"
chrono = "0.4.39"

qcpu_assembler = { path = "./qcpu_assembler" }
qcpu_syntax = { path = "./qcpu_syntax" }
qcpu_simulator = { path = "./qcpu_simulator" }
qcpu_tui = { path = "./qcpu_tui" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
