[package]
name = "qcpu"
version.workspace = true
edition.workspace = true
default-run = "qcpu"

[dependencies]
clap.workspace = true
strum.workspace = true
strum_macros.workspace = true
qcpu_assembler.workspace = true
qcpu_simulator.workspace = true
qcpu_syntax.workspace = true
qcpu_tui.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
crossterm.workspace = true
signal-hook.workspace = true
tracing.workspace = true
