[package]
name = "qcpu_simulator"
version.workspace = true
edition.workspace = true

[dependencies]
strum.workspace = true
strum_macros.workspace = true
qcpu_syntax.workspace = true
qcpu_assembler.workspace = true
bitvec.workspace = true
tracing.workspace = true
cfg-if.workspace = true
chrono.workspace = true
softfloat = "1.0.0"
rayon = "1.10.0"
rand = "0.9.0"

[features]
fmul = []
fdiv = []
fadd = []
fsqrt = []
ftoi = []
itof = []
fpu = ["fadd", "fmul", "fdiv", "fsqrt", "ftoi", "itof"]
debug = []
